[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = "Discord bot on Render"
authors = ["you <your@email.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
discord.py = "2.4.0"
PyYAML = "*"
aiohttp = "*"
websockets = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
